--- a/default.css
+++ b/default.css
@@ -58,10 +58,9 @@ a:active {
 #sidebar {
   float: right;
   width: 180px;
-  margin-top: 20px;
+  margin-top: 30px;
   padding-right: 10px;
   padding-bottom: 0;
-  border-left: 1px dashed #9c99cd;
   color: #000000;
   background-color: #ffffff;
 }
@@ -70,6 +69,7 @@ a:active {
   margin-top: 0;
   padding-left: 10px;
   padding-right: 10px;
+  border-left: 1px dashed #9c99cd;
 }
 
 #sidebar p.section {
@@ -85,6 +85,7 @@ a:active {
   margin: 0 0 15px 0;
   padding: 0 10px 0 10px;
   list-style-type: none;
+  border-left: 1px dashed #9c99cd;
 }
 
 #sidebar ul ul {
@@ -93,7 +94,8 @@ a:active {
 }
 
 #mainText {
-  margin: 40px 200px 0px 10px;
+  margin: 40px 200px 0 10px;
+  text-align: justify;
   padding: 0;
 }
 
@@ -154,6 +156,10 @@ a:active {
   border-bottom: 1px solid #d6e7ff;
 }
 
+#mainText dd {
+    margin-bottom: 1em;
+}
+
 div#about {
   float: right;
   padding: 10px;
@@ -167,3 +173,4 @@ div#about {
 div#about h4 {
   margin: 0;
 }
+
