add japanese translation of Writing a Custom Widget Using PyGTK, by
2006-10-31  Christian Reis  <kiko@async.com.br>

* articles.src: add japanese translation of Writing a Custom
  Widget Using PyGTK, by Satoshi Tanabe. Some reformatting.

* default.css: tweak rules to make lists inside the articles
  table look good.

--- a/default.css
+++ b/default.css
@@ -136,6 +136,18 @@ a:link:active {
   border: 1px solid black;
 }
 
+#articles ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-left: 2em;
+    font-size: smaller
+}
+
+#articles ul li {
+    list-style: circle;
+}
+
 #articles th {
   background-color: #999999;
   color: #000000;
