fix typo that breaks background color selection
2007-05-04  Rafael Villar Burke  <pachi@rvburke.com>

    	* default.css: fix typo that breaks background color selection

svn path=/trunk/; revision=388

--- a/default.css
+++ b/default.css
@@ -1,7 +1,7 @@
 /* Basic tags */
 body {
   margin: 0px;
-  padding: 0px
+  padding: 0px;
   background-color: white;
   font-family: sans-serif;
 }
