--- a/default.css
+++ b/default.css
@@ -123,7 +123,18 @@ a:link:active {
 /* Screenshot section */
 .screenshot {
   float: left;
-  margin: 10px;
+  text-align:center;
+  margin-right: 20px;
+}
+
+.screenshot p {
+  font-size:small;
+  font-style:italic;
+  margin:5px;
+}
+
+div.clear {
+  clear:left;
 }
 
 /* Articles section */
