--- a/default.css
+++ b/default.css
@@ -11,6 +11,14 @@ a img {
   border: 0;
 }
 
+a {
+  text-decoration:none;
+}
+
+a:hover {
+  text-decoration:underline;
+}
+
 a:link {
   color: #0000ff;
 }
