2009-07-23  Rafael Villar Burke  <pachi@rvburke.com>
        *  default.css feed.py index.src: Visual improvements

--- a/default.css
+++ b/default.css
@@ -107,6 +107,17 @@ a:link:active {
   padding: 0;
 }
 
+/* News */
+
+#newsblock {
+  font-size:85%;
+  color:#797979;
+}
+
+#newsblock .description a {
+  color: #5555ff;
+}
+
 /* Copyright footer */
 #copyright {
   text-align: center;
